# fishregression

./: Dockerfile  pyproject.toml  requirements.txt  u.list
note/: LinearRegression.ipynb  model.pkl  regression1.ipynb
src/fishregression/: cli.py  main.py  main2.py  manager.py
